Chore: Update dependencies